--- a/hospital/WebContent/WEB-INF/web.xml
+++ b/hospital/WebContent/WEB-INF/web.xml
@@ -64,5 +64,20 @@
         <filter-name>encodingFilter</filter-name>  
         <url-pattern>/*</url-pattern>  
     </filter-mapping>  
+    <filter>
+
+     <filter-name>OpenSessionInViewFilter</filter-name>
+
+      <filter-class>org.springframework.orm.hibernate5.support.OpenSessionInViewFilter</filter-class>
+   
+</filter>
+
+<filter-mapping>
+
+     <filter-name>OpenSessionInViewFilter</filter-name>
+
+     <url-pattern>/*</url-pattern>
+
+</filter-mapping>
   
 </web-app>
