--- a/hospital/WebContent/WEB-INF/web.xml
+++ b/hospital/WebContent/WEB-INF/web.xml
@@ -1,52 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
 
- 	<!--applicationContext.xml不是某个Servlet要用的文件,而是整个程序使用的-->
-    <!--所以需要使用context-param(上下文参数)进行配置
-    	通过contextConfigLocation参数指定配置文件的位置,如果有多个文件,使用逗号隔开
-    -->
-    
-    <context-param>
-        <param-name>contextConfigLocation</param-name>
-        <!--<param-value>/WEB-INF/applicationContext.xml</param-value>-->
-        <param-value>classpath:applicationContext.xml</param-value>
-    </context-param>    
-    
-    <!--需要配置ContextLoaderListener,
-    	该监听器监听到应用程序启动,会去加载配置文件-->
-    <listener>
-        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-    </listener>
-    
-    <!--如果spring mvc配置文件的名称和DispatcherServlet的名称不一致,那么需要-->
-    <!--通过servlet的初始化参数指定配置文件的位置
-    	通过参数contextConfigLocation指定配置文件位置
-    -->
+ 	
+   <!-- 1:核心控制器 -->
     <servlet>
-        <servlet-name>ds</servlet-name>
+        <servlet-name>DispatcherServlet</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
             <!--<param-value>/WEB-INF/dispatcher-servlet.xml</param-value>-->
-            <param-value>classpath:dispatcher-servlet.xml</param-value>
+            <param-value>classpath:applicationContext-dao.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
-        <servlet-name>ds</servlet-name>
+        <servlet-name>DispatcherServlet</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
     
+   <!--  2:session控制 -->
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
 
+  <!--  3:首页 -->
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
   
+ <!--  4:中文乱码 -->
   <filter>  
         <filter-name>encodingFilter</filter-name>  
         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>  
@@ -64,20 +48,21 @@
         <filter-name>encodingFilter</filter-name>  
         <url-pattern>/*</url-pattern>  
     </filter-mapping>  
-    <filter>
+    
+   <!--  <filter>
 
      <filter-name>OpenSessionInViewFilter</filter-name>
 
-      <filter-class>org.springframework.orm.hibernate5.support.OpenSessionInViewFilter</filter-class>
+         <filter-class>org.springframework.orm.hibernate5.support.OpenSessionInViewFilter</filter-class>
    
-</filter>
+     </filter>
 
-<filter-mapping>
+     <filter-mapping>
 
-     <filter-name>OpenSessionInViewFilter</filter-name>
+          <filter-name>OpenSessionInViewFilter</filter-name>
 
-     <url-pattern>/*</url-pattern>
+          <url-pattern>/*</url-pattern>
 
-</filter-mapping>
-  
+     </filter-mapping>
+   -->
 </web-app>
