--- a/hospital/WebContent/WEB-INF/web.xml
+++ b/hospital/WebContent/WEB-INF/web.xml
@@ -2,14 +2,25 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
 
  	
-   <!-- 1:核心控制器 -->
+
+	<context-param>  
+	 <param-name>contextConfigLocation</param-name>  
+	 <param-value>classpath:applicationContext.xml</param-value>  
+	</context-param>  
+	 
+	 
+	<listener> 
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class> 
+	</listener>
+  
+          <!-- 1:核心控制器 -->   
     <servlet>
         <servlet-name>DispatcherServlet</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
             <!--<param-value>/WEB-INF/dispatcher-servlet.xml</param-value>-->
-            <param-value>classpath:applicationContext-dao.xml</param-value>
+            <param-value>classpath:springmvc.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
@@ -25,10 +36,10 @@
         </session-timeout>
     </session-config>
 
-  <!--  3:首页 -->
-  <welcome-file-list>
-    <welcome-file>index.jsp</welcome-file>
-  </welcome-file-list>
+	<!--  3:首页 -->
+	<welcome-file-list>
+	  <welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
   
  <!--  4:中文乱码 -->
   <filter>  
@@ -49,20 +60,5 @@
         <url-pattern>/*</url-pattern>  
     </filter-mapping>  
     
-   <!--  <filter>
-
-     <filter-name>OpenSessionInViewFilter</filter-name>
-
-         <filter-class>org.springframework.orm.hibernate5.support.OpenSessionInViewFilter</filter-class>
-   
-     </filter>
-
-     <filter-mapping>
-
-          <filter-name>OpenSessionInViewFilter</filter-name>
-
-          <url-pattern>/*</url-pattern>
-
-     </filter-mapping>
-   -->
+  
 </web-app>
