--- a/hospital/WebContent/WEB-INF/web.xml
+++ b/hospital/WebContent/WEB-INF/web.xml
@@ -60,5 +60,22 @@
         <url-pattern>/*</url-pattern>  
     </filter-mapping>  
     
+    <filter>  
+        <filter-name>OpenSessionInViewFilter</filter-name>  
+        <filter-class>org.springframework.orm.hibernate5.support.OpenSessionInViewFilter</filter-class>  
+     	<init-param>  
+	<!--  
+	指定org.springframework.orm.hibernate3.LocalSessionFactoryBean在spring配置文件中的名称,默认值为sessionFactory  
+	     如果LocalSessionFactoryBean在spring中的名称不是sessionFactory,该参数一定要指定,否则会出现找不到sessionFactory的异常  
+	-->  
+	     	<param-name>sessionFactoryBean</param-name>  
+	   		<param-value>sessionFactory</param-value>  
+  		</init-param>  
+    </filter>  
+    <filter-mapping>  
+        <filter-name>OpenSessionInViewFilter</filter-name>  
+        <url-pattern>/*</url-pattern>  
+    </filter-mapping>
+    
   
 </web-app>
