--- a/hospital/WebContent/WEB-INF/web.xml
+++ b/hospital/WebContent/WEB-INF/web.xml
@@ -1,82 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
-
- 	<filter>  
-        <filter-name>OpenSessionInViewFilter</filter-name>  
-        <filter-class>org.springframework.orm.hibernate5.support.OpenSessionInViewFilter</filter-class>  
-     	<init-param>  
-	<!--  
-	指定org.springframework.orm.hibernate3.LocalSessionFactoryBean在spring配置文件中的名称,默认值为sessionFactory  
-	     如果LocalSessionFactoryBean在spring中的名称不是sessionFactory,该参数一定要指定,否则会出现找不到sessionFactory的异常  
-	-->  
-	     	<param-name>sessionFactoryBean</param-name>  
-	   		<param-value>sessionFactory</param-value>  
-  		</init-param>
-    </filter>
-    <filter-mapping>  
-        <filter-name>OpenSessionInViewFilter</filter-name>  
-        <url-pattern>/*</url-pattern>  
-    </filter-mapping>
-
-	<context-param>  
-	 <param-name>contextConfigLocation</param-name>  
-	 <param-value>classpath:applicationContext.xml</param-value>  
-	</context-param>  
-	 
-	 
-	<listener> 
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class> 
-	</listener>
-  
-          <!-- 1:核心控制器 -->   
-    <servlet>
-        <servlet-name>DispatcherServlet</servlet-name>
-        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-        <init-param>
-            <param-name>contextConfigLocation</param-name>
-            <!--<param-value>/WEB-INF/dispatcher-servlet.xml</param-value>-->
-            <param-value>classpath:springmvc.xml</param-value>
-        </init-param>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>DispatcherServlet</servlet-name>
-        <url-pattern>/</url-pattern>
-    </servlet-mapping>
-    
-   <!--  2:session控制 -->
-    <session-config>
-        <session-timeout>
-            30
-        </session-timeout>
-    </session-config>
-
-	<!--  3:首页 -->
-	<welcome-file-list>
-	  <welcome-file>index.jsp</welcome-file>
-	</welcome-file-list>
-  
- <!--  4:中文乱码 -->
-  <filter>  
-        <filter-name>encodingFilter</filter-name>  
-        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>  
-        <init-param>  
-            <param-name>encoding</param-name>  
-            <param-value>UTF-8</param-value>  
-        </init-param>  
-        <init-param>  
-            <param-name>forceEncoding</param-name>  
-            <param-value>true</param-value>  
-        </init-param>  
-    </filter>  
-    <!-- encoding filter for jsp page -->  
-    <filter-mapping>  
-        <filter-name>encodingFilter</filter-name>  
-        <url-pattern>/*</url-pattern>  
-    </filter-mapping>  
-    
-    
-    
-    
-  
+  <filter>
+    <filter-name>OpenSessionInViewFilter</filter-name>
+    <filter-class>org.springframework.orm.hibernate5.support.OpenSessionInViewFilter</filter-class>
+    <init-param>
+      <param-name>sessionFactoryBean</param-name>
+      <param-value>sessionFactory</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>OpenSessionInViewFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <context-param>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>classpath:applicationContext.xml</param-value>
+  </context-param>
+  <listener>
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+  </listener>
+  <servlet>
+    <servlet-name>DispatcherServlet</servlet-name>
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <init-param>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>classpath:springmvc.xml</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>DispatcherServlet</servlet-name>
+    <url-pattern>/</url-pattern>
+  </servlet-mapping>
+  <session-config>
+    <session-timeout>30</session-timeout>
+  </session-config>
+  <welcome-file-list>
+    <welcome-file>index.jsp</welcome-file>
+  </welcome-file-list>
+  <filter>
+    <filter-name>encodingFilter</filter-name>
+    <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+    <init-param>
+      <param-name>encoding</param-name>
+      <param-value>UTF-8</param-value>
+    </init-param>
+    <init-param>
+      <param-name>forceEncoding</param-name>
+      <param-value>true</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>encodingFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 </web-app>
